# api/routes/auth.routes.js
@@ -2,7 +2,6 @@ import fp from 'fastify-plugin';
 import {
   googleAuth,
   login,
-  logout,
   microsoftAuth,
   refreshTokens,
   signUp,
@@ -15,7 +14,6 @@ export default fp(async (fastify) => {
   fastify.post('/api/auth/login', login);
   fastify.post('/api/auth/signup', signUp);
   fastify.post('/api/auth/refresh-token', refreshTokens(fastify));
-  fastify.post('/api/auth/logout', logout(fastify));
   fastify.get('/api/auth/google-login', googleLogin);
   fastify.get('/api/auth/google', googleAuth);
   fastify.post('/api/auth/microsoft', microsoftAuth);
